third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/main_call_entry.exp
module 0x2::X {
    public entry fun foo() {
        ()
    }
}

script {
    use 0x2::X;
    entry fun <SELF>_0() {
        X::foo();
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ main_call_entry.move:9:15
  │
9 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
